--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.0/dist/semantic.min.css"></link>
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <script defer src="/bundle.js"></script>
   </head>
   <body>
