--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
     <title>Minkyu Roger Yang - Portfolio</title>
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon1.png" type="image/x-icon" />
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.0/dist/semantic.min.css"></link>
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
